[package]
name = "DeconzMqttBridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
tungstenite = "0.17.2"
url = "2.2.2"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"]}
