[package]
name = "DeconzMqttBridge"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
tungstenite = "0.18.0"
url = "2.3.1"
serde_json = "1.0.89"
serde = { version = "1.0.149", features = ["derive"]}
