[package]
name = "DeconzMqttBridge"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"]}
tokio = "1.27.0"
tungstenite = "0.20.0"
url = "2.3.1"
